test/files/neg/t6889.check
t6889.scala:16: error: the result type of an implicit conversion must be more specific than AnyRef
  def f(x: Dingo): AnyRef = x   // fail - no conversion to AnyRef
                            ^
t6889.scala:17: error: the result type of an implicit conversion must be more specific than Object
  def f2(x: Dingo): Object = x   // fail - no conversion to Object
                             ^
t6889.scala:18: error: an expression of type Null is ineligible for implicit conversion
  var x: Int = null             // fail - no conversion from Null
               ^
three errors found
